Set side menu. Create signup page.

--- a/app/pages/signup/signup.html
+++ b/app/pages/signup/signup.html
@@ -1,10 +1,7 @@
 <ion-header>
   <ion-navbar>
-    <button menuToggle>
-      <ion-icon name='menu'></ion-icon>
-    </button>
     <ion-title>
-      Login
+      Signup
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -23,9 +20,7 @@
     </ion-item>
 
     <div padding="">
-      <button class="button-block">Login</button>  
-      <br>
-      <button (click)="openPage(signupPage)" clear>Create an account</button>
+      <button class="button-block">Signup</button>  
     </div>
     
   </ion-list>
