Login and signup form working

--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -31,6 +31,6 @@
   </form>
 
   <div padding="">
-    <button (ngClick)="openPage(signupPage)" clear>Create an account</button>
+    <button (click)="openPage(signupPage)" clear>Create an account</button>
   </div>
 </ion-content>
