--- a/app/pages/signup/signup.html
+++ b/app/pages/signup/signup.html
@@ -7,21 +7,23 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
+  <form [formGroup]="signupForm" (ngSubmit)="signup(signupForm.value)">
+    <ion-list>
 
-    <ion-item>
-      <ion-label floating>Username</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label floating>Username</ion-label>
+        <ion-input type="text" formControlName="username"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label floating>Password</ion-label>
-      <ion-input type="password"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label floating>Password</ion-label>
+        <ion-input type="password" formControlName="password"></ion-input>
+      </ion-item>
 
-    <div padding="">
-      <button class="button-block">Signup</button>  
-    </div>
-    
-  </ion-list>
+      <div padding="">
+        <button class="button-block">Signup</button>  
+      </div>
+      
+    </ion-list>
+  </form>
 </ion-content>
