--- a/app/pages/set/set.html
+++ b/app/pages/set/set.html
@@ -9,7 +9,7 @@
         <ion-icon name="add"></ion-icon>
       </button>
     </ion-buttons>
-    
+
   </ion-navbar>
 </ion-header>
 
@@ -17,7 +17,7 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let set of sets" (click)="enter(set)">
-      {{set.doc.name}}
+      {{set.name}}
     </ion-item>
   </ion-list>
 </ion-content>
