--- a/app/app.html
+++ b/app/app.html
@@ -1,5 +1,4 @@
-<ion-menu [content]="content">
-
+<ion-menu id="loggedOutMenu" [content]="content">
   <ion-toolbar primary>
     <ion-title>Menu</ion-title>
   </ion-toolbar>
@@ -11,11 +10,32 @@
       </button>
 
       <button ion-item menuClose detail-none>
-        Close Menu
+        Close menu
       </button>
     </ion-list>
   </ion-content>
+</ion-menu>
 
+<ion-menu id="loggedInMenu" [content]="content">
+  <ion-toolbar primary>
+    <ion-title>Menu</ion-title>
+  </ion-toolbar>
+
+  <ion-content>
+    <ion-list>
+      <ion-list-header>
+        <ion-icon name="contact"></ion-icon>
+        {{userSession.get().name}}
+      </ion-list-header>
+      <button ion-item *ngFor="let p of protectedPages" (click)="openPage(p)">
+        {{p.title}}
+      </button>
+
+      <button ion-item menuClose detail-none>
+        Close menu
+      </button>
+    </ion-list>
+  </ion-content>
 </ion-menu>
 
 <ion-nav id="nav" #nav [root]="rootPage" #content swipe-back-enabled="true"></ion-nav>
