--- a/app/pages/edit-card/edit-card.html
+++ b/app/pages/edit-card/edit-card.html
@@ -1,18 +1,30 @@
-<!--
-  Generated template for the EditCardPage page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>edit-card</ion-title>
+    <ion-title>Edit card</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <form [formGroup]="editCardForm" (ngSubmit)="editCard(editCardForm.value)">
+    <ion-list>
 
+       <ion-item>
+         <ion-label stacked>Front</ion-label>
+         <ion-textarea formControlName="front"></ion-textarea>
+       </ion-item>
+
+       <ion-item>
+         <ion-label stacked>Back</ion-label>
+         <ion-textarea formControlName="back"></ion-textarea>
+       </ion-item>
+
+      <div padding="">
+        <button class="button-block">Update</button>
+      </div>
+
+    </ion-list>
+  </form>
 </ion-content>
