--- a/app/app.html
+++ b/app/app.html
@@ -30,6 +30,9 @@
       <button ion-item *ngFor="let p of protectedPages" (click)="openPage(p)">
         {{p.title}}
       </button>
+      <button ion-item (click)="logout()">
+        Logout
+      </button>
 
       <button ion-item menuClose detail-none>
         Close menu
