--- a/app/pages/set/set.html
+++ b/app/pages/set/set.html
@@ -27,6 +27,10 @@
         <ion-icon name="book"></ion-icon>
         <div>Memorize</div>
       </button>
+      <button item-right (click)="reset(set)" clear small>
+        <ion-icon name="refresh"></ion-icon>
+        <div>Reset</div>
+      </button>
     </ion-item>
 
   </ion-list>
