Update to Ionic 2 RC2 e @ionic/app-scripts 0.0.39

--- a/src/pages/set/set.html
+++ b/src/pages/set/set.html
@@ -19,16 +19,19 @@
     <ion-item *ngFor="let set of sets">
       {{set.name}}
 
-      <button item-right (click)="enter(set)" clear small>
+      <button ion-button item-right (click)="enter(set)" clear small>
         <ion-icon name="create"></ion-icon>
+        &nbsp;
         <div>Edit</div>
       </button>
-      <button item-right (click)="memorize(set)" clear small>
+      <button ion-button item-right (click)="memorize(set)" clear small>
         <ion-icon name="book"></ion-icon>
+        &nbsp;
         <div>Memorize</div>
       </button>
-      <button item-right (click)="reset(set)" clear small>
+      <button ion-button item-right (click)="reset(set)" clear small>
         <ion-icon name="refresh"></ion-icon>
+        &nbsp;
         <div>Reset</div>
       </button>
     </ion-item>
