Redirect to set page if has user logged

--- a/src/pages/card/card.html
+++ b/src/pages/card/card.html
@@ -34,10 +34,12 @@
       <ion-col>
         <button ion-button (click)="edit(card)" clear small>
           <ion-icon name="create"></ion-icon>
+          &nbsp;
           <div>Edit</div>
         </button>
         <button ion-button (click)="delete(card)" danger clear small>
           <ion-icon name="trash"></ion-icon>
+          &nbsp;
           <div>Delete</div>
         </button>
       </ion-col>
