--- a/src/pages/set/set.html
+++ b/src/pages/set/set.html
@@ -5,7 +5,7 @@
     </ion-title>
 
     <ion-buttons end>
-      <button (click)="openModal()">
+      <button ion-button (click)="openModal()">
         <ion-icon name="add"></ion-icon>
       </button>
     </ion-buttons>
