Add cancel buttons. Get only sets of logged user.

--- a/src/pages/edit-card/edit-card.html
+++ b/src/pages/edit-card/edit-card.html
@@ -27,4 +27,8 @@
 
     </ion-list>
   </form>
+
+  <div padding="">
+    <button ion-button (click)="cancel()" color="light" class="button-block">Cancel</button>
+  </div>
 </ion-content>
