--- a/src/pages/new-set/new-set.html
+++ b/src/pages/new-set/new-set.html
@@ -15,9 +15,13 @@
       </ion-item>
 
       <div padding="">
-        <button ion-button class="button-block">Create</button>
+        <button ion-button type="submit" class="button-block">Create</button>
       </div>
 
     </ion-list>
   </form>
+
+  <div padding="">
+    <button ion-button (click)="cancel()" color="light" class="button-block">Cancel</button>
+  </div>
 </ion-content>
