--- a/src/pages/set/set.html
+++ b/src/pages/set/set.html
@@ -18,21 +18,17 @@
   <ion-list>
     <ion-item *ngFor="let set of sets">
       {{set.name}}
-
+      <button ion-button item-right (click)="delete(set)" clear small>
+        <ion-icon name="trash"></ion-icon>
+      </button>
       <button ion-button item-right (click)="enter(set)" clear small>
         <ion-icon name="create"></ion-icon>
-        &nbsp;
-        <div>Edit</div>
       </button>
       <button ion-button item-right (click)="memorize(set)" clear small>
         <ion-icon name="book"></ion-icon>
-        &nbsp;
-        <div>Memorize</div>
       </button>
       <button ion-button item-right (click)="reset(set)" clear small>
         <ion-icon name="refresh"></ion-icon>
-        &nbsp;
-        <div>Reset</div>
       </button>
     </ion-item>
 
