--- a/src/pages/set/set.html
+++ b/src/pages/set/set.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-navbar>
+    <button menuToggle ion-button icon-only>
+      <ion-icon name='menu'></ion-icon>
+    </button>
     <ion-title>
       Sets
     </ion-title>
