--- a/src/pages/edit-card/edit-card.html
+++ b/src/pages/edit-card/edit-card.html
@@ -23,12 +23,9 @@
 
       <div padding="">
         <button ion-button class="button-block">Update</button>
+        <button ion-button (click)="cancel($event)" color="light" class="button-block">Cancel</button>
       </div>
 
     </ion-list>
   </form>
-
-  <div padding="">
-    <button ion-button (click)="cancel()" color="light" class="button-block">Cancel</button>
-  </div>
 </ion-content>
