--- a/src/pages/new-card/new-card.html
+++ b/src/pages/new-card/new-card.html
@@ -13,7 +13,7 @@
 
        <ion-item>
          <ion-label stacked>Front</ion-label>
-         <ion-textarea formControlName="front"></ion-textarea>
+         <ion-textarea formControlName="front" autofocus></ion-textarea>
        </ion-item>
 
        <ion-item>
