--- a/src/pages/new-set/new-set.html
+++ b/src/pages/new-set/new-set.html
@@ -11,7 +11,7 @@
 
       <ion-item>
         <ion-label floating>Name</ion-label>
-        <ion-input type="text" formControlName="name"></ion-input>
+        <ion-input type="text" formControlName="name" autofocus></ion-input>
       </ion-item>
 
       <div padding="">
