--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -12,7 +12,7 @@
 
       <ion-item>
         <ion-label floating>Username</ion-label>
-        <ion-input type="text" formControlName="username"></ion-input>
+        <ion-input type="text" formControlName="username" autofocus></ion-input>
       </ion-item>
 
       <ion-item>
