--- a/src/pages/set/set.html
+++ b/src/pages/set/set.html
@@ -33,6 +33,9 @@
       <button ion-button item-right (click)="reset(set)" clear small>
         <ion-icon name="refresh"></ion-icon>
       </button>
+      <button ion-button item-right (click)="import(set)" clear small>
+        <ion-icon name="cloud-upload"></ion-icon>
+      </button>
     </ion-item>
 
   </ion-list>
