Replace pouchdb changes by angularjs events. Update to pouchdb 6.1.1.

--- a/src/pages/import-card/import-card.html
+++ b/src/pages/import-card/import-card.html
@@ -30,5 +30,31 @@
       </div>
 
     </ion-list>
+
+    <div padding="">
+      <h5>Expected format</h5>
+      <p>
+        (card 1 front)(separator)(card 1 back)
+        <br>
+        (card 2 front)(separator)(card 2 back)
+        <br>
+        (card 3 front)(separator)(card 3 back)
+        <br>
+        ...
+      </p>
+    </div>
+
+    <div padding="">
+      <h5>Example</h5>
+      <p>
+        cool,legal
+        <br>
+        amazing,incrivel
+        <br>
+        car,carro
+        <br>
+        ...
+      </p>
+    </div>
   </form>
 </ion-content>
